TAG: qcreports_db-6-0-23-22
DATE: 05/29/2024
STAFF: lec
wts2-1480/fl2-876/move BIB Missing DOI from weekly to daily
#       renamed:    weekly/BIB_MissingDOI.sql -> mgd/BIB_MissingDOI.sql

TAG: qcreports_db-6-0-23-21
DATE: 05/28/2024
STAFF: lec
wts2-1403/fl2-732/Change of OMIM prefix to MIM in MGI: back end

TAG: qcreports_db-6-0-23-20
TAG: qcreports_db-6-0-23-19
DATE: 04/29/2024
STAFF: lec,jer
wts2-???/fl2-832/Move TR12977 custom report into qcreports_db/pwi
wts2-???/fl2-832/Move TR12977 custom report into qcreports_db/pwi - limit displayed rows to 1000.

TAG: qcreports_db-6-0-23-18
DATE: 04/02/2024
STAFF: lec
wts2-1155/GOC taking over GOA mouse, GOA human, etc.
#       deleted:    VOC_GOObsolete.py

wts2-1155/GOC taking over GOA mouse, GOA human, etc.
TAG: qcreports_db-6-0-23-17
DATE: 04/02/2024
STAFF: lec
wts2-1453/fl2-811/add curation state to existing custom report

TAG: qcreports_db-6-0-23-16
TAG: qcreports_db-6-0-23-15
DATE: 03/29/2024
STAFF: lec
wts2-1155/GOC taking over GOA mouse, GOA human, etc.
wts2-1450/Custom Report for GXD workflow tag
#       new file:   GXD_PriorityTags.py
mgd/GO_Combined_Report.py
mgd/GO_MGIGAF.py
mgd/GO_stats.py
mgd/GO_MGIGAF.py
monthly/MRK_GOSymbolChange.sql
qcgo_reports.csh
qcr.shtml
qcweekly_reports.csh

TAG: qcreports_db-6-0-23-14
DATE: 03/25/2024
STAFF: lec
wts2-1447/Lit triage: journals x year of publication (QC report to track journal usage in the MasterBib)
wts2-1448/Lit triage: journals x curatorial group (QC reports to track journal usage by group)
wts2-1449/Lit triage: journals' keep/discard numbers
#       new file:   monthly/BIB_JournalByYear.py
#       new file:   monthly/BIB_JournalByGroupYear.py
#       new file:   monthly/BIB_JournalByYearKD.py

TAG: qcreports_db-6-0-23-13
TAG: qcreports_db-6-0-23-12
DATE: 03/19/2024
STAFF: lec
wts2-1441/fl3-787/custom report listing HT Experiment Notes for experiments whose curation status = done

TAG: qcreports_db-6-0-23-11
TAG: qcreports_db-6-0-23-10
DATE: 03/14/2024
STAFF: lec